New custom component for rendering the client outputs (#1818)
New features
- Always show the typespec above
- sync the tabs
-  just defining the code blocks without the extra `TabItem`
<img width="790" alt="image"
src="https://github.com/user-attachments/assets/3780ed65-5792-46d7-a524-c69ca5eaa59e">

--- a/website/src/content/docs/docs/howtos/Client Generation/02client.mdx
+++ b/website/src/content/docs/docs/howtos/Client Generation/02client.mdx
@@ -2,7 +2,7 @@
 title: Client hierarchy
 ---
 
-import { Tabs, TabItem } from "@astrojs/starlight/components";
+import { ClientTabs, ClientTabItem } from "@components/client-tabs";
 
 This page documents the default client hierarchy behavior as well as how to customize clients. For an overview of the setup, please visit the previous page.
 
@@ -20,10 +20,9 @@ Different language's code generator will have different way to organize clients 
 
 ### Single client
 
-<Tabs>
-<TabItem value="typespec" label="TypeSpec" default>
+<ClientTabs>
 
-```typespec
+```typespec title="main.tsp"
 @service({
   title: "Pet Store",
 })
@@ -36,10 +35,6 @@ op feed(): void;
 op pet(): void;
 ```
 
-</TabItem>
-
-<TabItem value="python" label="Python">
-
 ```python
 from pet_store import PetStoreClient
 
@@ -47,9 +42,6 @@ client = PetStoreClient()
 client.feed()
 client.pet()
 ```
-
-</TabItem>
-<TabItem value="csharp" label="CSharp" >
 
 ```csharp
 using PetStore;
@@ -59,9 +51,6 @@ client.Feed();
 client.Pet();
 ```
 
-</TabItem>
-<TabItem value="typescript" label="Typescript" >
-
 ```typescript
 import { PetStoreClient } from "@azure/package-name";
 
@@ -70,22 +59,17 @@ client.feed();
 client.pet();
 ```
 
-</TabItem>
-<TabItem value="java" label="Java" >
-
 ```java
 PetStoreClient client = new PetStoreClientBuilder().buildClient();
 client.feed();
 client.pet();
 ```
 
-</TabItem>
-</Tabs>
+</ClientTabs>
 
 ### Client with one-layer child operation groups
 
-<Tabs>
-<TabItem value="typespec" label="TypeSpec" default>
+<ClientTabs>
 
 ```typespec
 @service({
@@ -107,10 +91,6 @@ namespace Cats {
 }
 ```
 
-</TabItem>
-
-<TabItem value="python" label="Python">
-
 ```python
 from pet_store import PetStoreClient
 
@@ -120,9 +100,6 @@ client.dogs.pet()
 client.cats.feed()
 client.cats.pet()
 ```
-
-</TabItem>
-<TabItem value="csharp" label="CSharp" >
 
 ```csharp
 using PetStore;
@@ -134,9 +111,6 @@ client.GetCatsClient().Feed();
 client.GetCatsClient().Pet();
 ```
 
-</TabItem>
-<TabItem value="typescript" label="Typescript" >
-
 ```typescript
 import { PetStoreClient } from "@azure/package-name";
 
@@ -146,9 +120,6 @@ client.dogs.pet();
 client.cats.feed();
 client.cats.pet();
 ```
-
-</TabItem>
-<TabItem value="java" label="Java" >
 
 ```java
 PetStoreClientBuilder builder = new PetStoreClientBuilder();
@@ -162,15 +133,13 @@ catsClient.feed();
 catsClient.pet();
 ```
 
-</TabItem>
-</Tabs>
+</ClientTabs>
 
 ### Client with multi-layer child operation group
 
-<Tabs>
-<TabItem value="typespec" label="TypeSpec" default>
+<ClientTabs>
 
-```typespec
+```typespec title="main.tsp"
 @service({
   title: "Pet Store",
   version: "v1",
@@ -205,10 +174,6 @@ interface Actions {
 }
 ```
 
-</TabItem>
-
-<TabItem value="python" label="Python">
-
 ```python
 from pet_store import PetStoreClient
 
@@ -221,9 +186,6 @@ client.pets.actions.pet()
 client.actions.open()
 client.actions.close()
 ```
-
-</TabItem>
-<TabItem value="csharp" label="CSharp" >
 
 ```csharp
 using PetStore;
@@ -238,9 +200,6 @@ client.GetActionsClient().Open();
 client.GetActionsClient().Close();
 ```
 
-</TabItem>
-<TabItem value="typescript" label="Typescript" >
-
 ```typescript
 import { PetStoreClient } from "@azure/package-name";
 
@@ -253,9 +212,6 @@ client.pets.actions.pet();
 client.actions.open();
 client.actions.close();
 ```
-
-</TabItem>
-<TabItem value="java" label="Java" >
 
 ```java
 PetStoreClientBuilder builder = new PetStoreClientBuilder();
@@ -278,8 +234,7 @@ actionsClient.open();
 actionsClient.close();
 ```
 
-</TabItem>
-</Tabs>
+</ClientTabs>
 
 ## Customizations
 
@@ -295,10 +250,9 @@ For this section, we will assume that you have service called `PetStore` in the 
 
 This can be achieved with the augment decorator: `@clientName` from `typespec-client-generator-core`.
 
-<Tabs>
-<TabItem value="typespec" label="TypeSpec" default>
+<ClientTabs>
 
-```typespec
+```typespec title="client.tsp"
 import "./main.tsp";
 import "@azure-tools/typespec-client-generator-core";
 
@@ -306,9 +260,6 @@ using Azure.ClientGenerator.Core;
 
 @@clientName(PetStore, "PetStoreGreatClient");
 ```
-
-</TabItem>
-<TabItem value="python" label="Python">
 
 ```python
 from pet_store import PetStoreGreatClient
@@ -318,19 +269,13 @@ client.feed()
 client.pet()
 ```
 
-</TabItem>
-<TabItem value="csharp" label="CSharp" >
-
-```c#
+```csharp
 using PetStore;
 
 PetStoreGreatClient client = new PetStoreGreatClient();
 client.Feed();
 client.Pet();
 ```
-
-</TabItem>
-<TabItem value="typescript" label="Typescript" >
 
 ```typescript
 import { PetStoreGreatClient } from "@azure/package-name";
@@ -340,26 +285,21 @@ client.feed();
 client.pet();
 ```
 
-</TabItem>
-<TabItem value="java" label="Java" >
-
 ```java
 PetStoreGreatClient client = new PetStoreGreatClientBuilder().buildClient();
 client.feed();
 client.pet();
 ```
 
-</TabItem>
-</Tabs>
+</ClientTabs>
 
 ### Renaming the client namespace
 
 This can be achieved with the augment decorator: `@clientNamespace` from `typespec-client-generator-core`.
 
-<Tabs>
-<TabItem value="typespec" label="TypeSpec" default>
+<ClientTabs>
 
-```typespec
+```typespec title="client.tsp"
 import "./main.tsp";
 import "@azure-tools/typespec-client-generator-core";
 
@@ -367,9 +307,6 @@ using Azure.ClientGenerator.Core;
 
 @@clientNamespace(PetStore, "PetStoreRenamed");
 ```
-
-</TabItem>
-<TabItem value="python" label="Python">
 
 ```python
 from pet_store_renamed import PetStoreClient
@@ -379,9 +316,6 @@ client.feed()
 client.pet()
 ```
 
-</TabItem>
-<TabItem value="csharp" label="CSharp" >
-
 ```csharp
 using PetStoreRenamed;
 
@@ -389,9 +323,6 @@ PetStoreClient client = new PetStoreClient();
 client.Feed();
 client.Pet();
 ```
-
-</TabItem>
-<TabItem value="typescript" label="Typescript" >
 
 ```typescript
 import { PetStoreClient } from "@azure/package-name";
@@ -401,9 +332,6 @@ client.feed();
 client.pet();
 ```
 
-</TabItem>
-<TabItem value="java" label="Java" >
-
 ```java
 package com.petstorerenamed;
 
@@ -412,15 +340,13 @@ client.feed();
 client.pet();
 ```
 
-</TabItem>
-</Tabs>
+</ClientTabs>
 
 ### Splitting the operations into two clients
 
 Two clients that separate the operations can be declared using the `@client` decorator from `typespec-client-generator-core`.
 
-<Tabs>
-<TabItem value="typespec" label="TypeSpec" default>
+<ClientTabs>
 
 ```typespec
 import "./main.tsp";
@@ -447,9 +373,6 @@ interface Client2 {
 }
 ```
 
-</TabItem>
-<TabItem value="python" label="Python">
-
 ```python
 from pet_store_renamed import FoodClient, PetActionClient
 
@@ -459,9 +382,6 @@ client2 = PetActionClient()
 client1.feed()
 client2.pet()
 ```
-
-</TabItem>
-<TabItem value="csharp" label="CSharp" >
 
 ```csharp
 using PetStoreRenamed;
@@ -473,9 +393,6 @@ petActionClient.Pet();
 foodClient.Feed();
 ```
 
-</TabItem>
-<TabItem value="typescript" label="Typescript" >
-
 ```typescript
 import { FoodClient, PetActionClient } from "@azure/package-name";
 
@@ -484,9 +401,6 @@ const client2 = new FoodClient();
 client1.pet();
 client2.feed();
 ```
-
-</TabItem>
-<TabItem value="java" label="Java" >
 
 ```java
 package com.petstorerenamed;
@@ -498,17 +412,15 @@ foodClient.feed()
 petActionClient.pet()
 ```
 
-</TabItem>
-</Tabs>
+</ClientTabs>
 
 ### One client and two operation groups
 
 Two clients that separate the operations can be declared using the `@client` decorator and the `@operationGroup` decorator from `typespec-client-generator-core`:
 
-<Tabs>
-<TabItem value="typespec" label="TypeSpec" default>
+<ClientTabs>
 
-```typespec
+```typespec title="client.tsp"
 import "./main.tsp";
 import "@azure-tools/typespec-client-generator-core";
 
@@ -531,9 +443,6 @@ interface OpGrp2 {
 }
 ```
 
-</TabItem>
-<TabItem value="python" label="Python">
-
 ```python
 from pet_store_renamed import PetStoreClient
 
@@ -542,9 +451,6 @@ client = PetStoreClient()
 client.op_grp_1.feed()
 client.op_grp_2.pet()
 ```
-
-</TabItem>
-<TabItem value="csharp" label="CSharp" >
 
 ```csharp
 using PetStoreRenamed;
@@ -555,9 +461,6 @@ client.GetOpGrp1Client().Feed();
 client.GetOpGrp2Client().Pet();
 ```
 
-</TabItem>
-<TabItem value="typescript" label="Typescript" >
-
 ```typescript
 import { PetStoreClient } from "@azure/package-name";
 
@@ -565,9 +468,6 @@ const client = new PetStoreClient();
 client.opGrp1.feed();
 client.opGrp2.pet();
 ```
-
-</TabItem>
-<TabItem value="java" label="Java" >
 
 ```java
 package com.petstorerenamed;
@@ -581,17 +481,15 @@ OpGrp2Client opGrp2Client = builder.buildOpGrp2Client();
 opGrp2Client.pet();
 ```
 
-</TabItem>
-</Tabs>
+</ClientTabs>
 
 ### Splitting the operations in two clients and have clients in different namespace
 
 Two clients that separates the operations can be declared using the `client` decorator of `typespec-client-generator-core`:
 
-<Tabs>
-<TabItem value="typespec" label="TypeSpec" default>
+<ClientTabs>
 
-```typespec
+```typespec title="client.tsp"
 import "./main.tsp";
 import "@azure-tools/typespec-client-generator-core";
 
@@ -617,9 +515,6 @@ interface Client2 {
 }
 ```
 
-</TabItem>
-<TabItem value="python" label="Python">
-
 ```python
 from pet_store_renamed import FoodClient
 from pet_store_renamed.sub_namespace import PetActionClient
@@ -630,9 +525,6 @@ client2 = PetActionClient()
 client1.feed()
 client2.pet()
 ```
-
-</TabItem>
-<TabItem value="csharp" label="CSharp" >
 
 ```csharp
 using PetStoreRenamed;
@@ -645,15 +537,9 @@ petActionClient.Pet();
 foodClient.Feed();
 ```
 
-</TabItem>
-<TabItem value="typescript" label="Typescript" >
-
 ```typescript
 NOT_SUPPORTED;
 ```
-
-</TabItem>
-<TabItem value="java" label="Java" >
 
 ```java
 import com.petstorerenamed.FoodClient;
@@ -668,5 +554,4 @@ foodClient.feed();
 petActionClient.pet();
 ```
 
-</TabItem>
-</Tabs>
+</ClientTabs>
