--- a/website/src/content/docs/docs/howtos/Client Generation/01setup.mdx
+++ b/website/src/content/docs/docs/howtos/Client Generation/01setup.mdx
@@ -2,7 +2,7 @@
 title: Setup for SDK customization
 ---
 
-import { Tabs, TabItem } from "@astrojs/starlight/components";
+import { ClientTabs, ClientTabItem } from "@components/client-tabs";
 
 This page explains how to setup customization of a generator if necessary.
 
