--- a/website/src/content/docs/docs/howtos/Client Generation/06types.mdx
+++ b/website/src/content/docs/docs/howtos/Client Generation/06types.mdx
@@ -2,7 +2,7 @@
 title: Generated Types
 ---
 
-import { Tabs, TabItem } from "@astrojs/starlight/components";
+import { ClientTabs, ClientTabItem } from "@components/client-tabs";
 
 This page documents what type definitions in TypeSpec are generated as in emitted libraries
 
@@ -10,10 +10,12 @@ This page documents what type definitions in TypeSpec are generated as in emitte
 
 ### Flattening
 
-> **NOTE:** Flattening is NOT a recommended pattern, and you shouldn't use it unless told by SDK architects.
+:::caution
+Flattening is NOT a recommended pattern, and you shouldn't use it unless told by SDK architects.
+:::
 
-<Tabs>
-<TabItem value="typespec" label="TypeSpec" default>
+<ClientTabs>
+<ClientTabItem lang="typespec" >
 
 ```typespec
 model Properties {
@@ -26,8 +28,8 @@ model Foo {
 }
 ```
 
-</TabItem>
-<TabItem value="tcgc" label="TCGC">
+</ClientTabItem>
+<ClientTabItem lang="tcgc">
 
 ```json
 {
@@ -62,8 +64,8 @@ model Foo {
 }
 ```
 
-</TabItem>
-<TabItem value="python" label="Python">
+</ClientTabItem>
+<ClientTabItem lang="python">
 
 Python will do dynamic flattening, exposing the non-flattening syntax, and dynamically accepting the flattened access.
 
@@ -83,8 +85,8 @@ print(f.name)  # Flattened access is dynamically supported, but not documented
 
 ```
 
-</TabItem>
-<TabItem value="csharp" label="CSharp" >
+</ClientTabItem>
+<ClientTabItem lang="csharp" >
 
 CSharp will generate the model with properties being flattened. During serialization/deserialization, the model will be serialized/deserialized as a non-flattened model.
 
@@ -152,16 +154,16 @@ public partial class Foo : IUtf8JsonSerializable, IJsonModel<Foo>
 }
 ```
 
-</TabItem>
-<TabItem value="typescript" label="Typescript" >
+</ClientTabItem>
+<ClientTabItem lang="typescript" >
 
 ```typescript
 // Please note that this feature is not supported right now, and the model will be generated un-flattened.
 // Please comment and follow work status on: https://github.com/Azure/autorest.typescript/issues/2164
 ```
 
-</TabItem>
-<TabItem value="java" label="Java" >
+</ClientTabItem>
+<ClientTabItem lang="java" >
 
 In Java, `@flattenProperty` have no effect on generated libraries.
 
@@ -174,15 +176,15 @@ public final class Properties {
 }
 ```
 
-</TabItem>
-</Tabs>
+</ClientTabItem>
+</ClientTabs>
 
 ### Models with additional properties
 
 #### Additional properties of any type
 
-<Tabs>
-<TabItem value="typespec" label="TypeSpec" default>
+<ClientTabs>
+<ClientTabItem lang="typespec" >
 
 Recommend usage:
 
@@ -210,8 +212,8 @@ model Animal is Record<unknown> {
 }
 ```
 
-</TabItem>
-<TabItem value="tcgc" label="TCGC">
+</ClientTabItem>
+<ClientTabItem lang="tcgc">
 
 ```json
 {
@@ -245,8 +247,8 @@ model Animal is Record<unknown> {
 }
 ```
 
-</TabItem>
-<TabItem value="python" label="Python">
+</ClientTabItem>
+<ClientTabItem lang="python">
 
 Python models are designed to support adding any additional properties.
 
@@ -264,8 +266,8 @@ animal["friend"] = "Jerry"
 animal["age"] = 5
 ```
 
-</TabItem>
-<TabItem value="csharp" label="CSharp" >
+</ClientTabItem>
+<ClientTabItem lang="csharp" >
 
 ```csharp
 public partial class Animal : IJsonModel<Animal> {
@@ -278,8 +280,8 @@ public partial class Animal : IJsonModel<Animal> {
 }
 ```
 
-</TabItem>
-<TabItem value="typescript" label="Typescript" >
+</ClientTabItem>
+<ClientTabItem lang="typescript" >
 
 ```ts
 // RLC input
@@ -301,8 +303,8 @@ export interface Animal extends Record<string, any> {
 }
 ```
 
-</TabItem>
-<TabItem value="java" label="Java" >
+</ClientTabItem>
+<ClientTabItem lang="java" >
 
 ```java
 @Fluent
@@ -315,13 +317,13 @@ public final class Animal implements JsonSerializable<Animal> {
 }
 ```
 
-</TabItem>
-</Tabs>
+</ClientTabItem>
+</ClientTabs>
 
 #### Additional properties of specific type
 
-<Tabs>
-<TabItem value="typespec" label="TypeSpec" default>
+<ClientTabs>
+<ClientTabItem lang="typespec" >
 
 ```typespec
 model AnimalProperty {
@@ -336,8 +338,8 @@ model Animal {
 }
 ```
 
-</TabItem>
-<TabItem value="tcgc" label="TCGC">
+</ClientTabItem>
+<ClientTabItem lang="tcgc">
 
 ```json
 {
@@ -394,8 +396,8 @@ model Animal {
 }
 ```
 
-</TabItem>
-<TabItem value="python" label="Python">
+</ClientTabItem>
+<ClientTabItem lang="python">
 
 Python models are designed to support adding any additional properties.
 
@@ -419,8 +421,8 @@ animal["friend"] = AnimalProperty(category="relationship", value="Jerry")
 animal["age"] = AnimalProperty(category="attribute", value=5)
 ```
 
-</TabItem>
-<TabItem value="csharp" label="CSharp" >
+</ClientTabItem>
+<ClientTabItem lang="csharp" >
 
 Due to currently there is no way to know whether a Json could be correctly mapped into the specified type in `.Net`, we currently generate any non-primitive value type in additional properties property as `BinaryData`.
 
@@ -472,8 +474,8 @@ public partial class Animal : IJsonModel<Animal>
 }
 ```
 
-</TabItem>
-<TabItem value="typescript" label="Typescript" >
+</ClientTabItem>
+<ClientTabItem lang="typescript" >
 
 ```ts
 // RLC input
@@ -518,8 +520,8 @@ export interface Animal {
 }
 ```
 
-</TabItem>
-<TabItem value="java" label="Java" >
+</ClientTabItem>
+<ClientTabItem lang="java" >
 
 ```java
 @Fluent
@@ -533,13 +535,13 @@ public final class Animal implements JsonSerializable<Animal> {
 
 ```
 
-</TabItem>
-</Tabs>
+</ClientTabItem>
+</ClientTabs>
 
 #### Additional properties of union type
 
-<Tabs>
-<TabItem value="typespec" label="TypeSpec" default>
+<ClientTabs>
+<ClientTabItem lang="typespec" >
 
 ```typespec
 model Animal {
@@ -558,8 +560,8 @@ model Animal {
 }
 ```
 
-</TabItem>
-<TabItem value="tcgc" label="TCGC">
+</ClientTabItem>
+<ClientTabItem lang="tcgc">
 
 ```json
 {
@@ -604,8 +606,8 @@ model Animal {
 }
 ```
 
-</TabItem>
-<TabItem value="python" label="Python">
+</ClientTabItem>
+<ClientTabItem lang="python">
 
 Python models are designed to support adding any additional properties.
 
@@ -623,8 +625,8 @@ animal["friend"] = "Jerry"
 animal["age"] = 5
 ```
 
-</TabItem>
-<TabItem value="csharp" label="CSharp" >
+</ClientTabItem>
+<ClientTabItem lang="csharp" >
 
 ```csharp
 public partial class Animal : IJsonModel<Animal>
@@ -638,8 +640,8 @@ public partial class Animal : IJsonModel<Animal>
 }
 ```
 
-</TabItem>
-<TabItem value="typescript" label="Typescript" >
+</ClientTabItem>
+<ClientTabItem lang="typescript" >
 
 ```ts
 // RLC input and output
@@ -655,8 +657,8 @@ export interface Animal extends Record<string, string | number> {
 }
 ```
 
-</TabItem>
-<TabItem value="java" label="Java" >
+</ClientTabItem>
+<ClientTabItem lang="java" >
 
 ```java
 @Fluent
@@ -669,13 +671,13 @@ public final class Animal implements JsonSerializable<Animal> {
 }
 ```
 
-</TabItem>
-</Tabs>
+</ClientTabItem>
+</ClientTabs>
 
 #### Additional properties of nullable type
 
-<Tabs>
-<TabItem value="typespec" label="TypeSpec" default>
+<ClientTabs>
+<ClientTabItem lang="typespec" >
 
 ```typespec
 model Animal {
@@ -685,8 +687,8 @@ model Animal {
 }
 ```
 
-</TabItem>
-<TabItem value="tcgc" label="TCGC">
+</ClientTabItem>
+<ClientTabItem lang="tcgc">
 
 ```json
 {
@@ -724,8 +726,8 @@ model Animal {
 }
 ```
 
-</TabItem>
-<TabItem value="python" label="Python">
+</ClientTabItem>
+<ClientTabItem lang="python">
 
 Python models are designed to support adding any additional properties.
 
@@ -743,8 +745,8 @@ animal["friend"] = "Jerry"
 animal["alert"] = None
 ```
 
-</TabItem>
-<TabItem value="csharp" label="CSharp" >
+</ClientTabItem>
+<ClientTabItem lang="csharp" >
 
 ```csharp
 public partial class Animal : IJsonModel<Animal>
@@ -758,8 +760,8 @@ public partial class Animal : IJsonModel<Animal>
 }
 ```
 
-</TabItem>
-<TabItem value="typescript" label="Typescript" >
+</ClientTabItem>
+<ClientTabItem lang="typescript" >
 
 ```ts
 // RLC input and output
@@ -775,9 +777,9 @@ export interface Animal extends Record<string, string | null> {
 }
 ```
 
-</TabItem>
+</ClientTabItem>
 
-<TabItem value="java" label="Java" >
+<ClientTabItem lang="java" >
 
 ```java
 @Fluent
@@ -791,15 +793,15 @@ public final class Animal implements JsonSerializable<Animal> {
 
 ```
 
-</TabItem>
-</Tabs>
+</ClientTabItem>
+</ClientTabs>
 
 ### Discriminator
 
 TypeSpec uses `@discriminator` decorator to add a discriminator to a model.
 
-<Tabs>
-<TabItem value="typespec" label="TypeSpec" default>
+<ClientTabs>
+<ClientTabItem lang="typespec" >
 
 TypeSpec now has two ways to represent a discriminated set.
 
@@ -857,8 +859,8 @@ model Siamese {}
 model Ragdoll {}
 ```
 
-</TabItem>
-<TabItem value="tcgc" label="TCGC">
+</ClientTabItem>
+<ClientTabItem lang="tcgc">
 
 TCGC currently only supports the discriminated set based on models, discriminated union is not supported yet.
 
@@ -908,8 +910,8 @@ This is a brief structure of the models in a discriminated set in the output of 
 }
 ```
 
-</TabItem>
-<TabItem value="python" label="Python">
+</ClientTabItem>
+<ClientTabItem lang="python">
 
 ```python
 from .. import _model_base
@@ -925,8 +927,8 @@ class Ragdoll(Cat):
     kind: Literal["ragdoll"] = rest_discriminator(name="kind")
 ```
 
-</TabItem>
-<TabItem value="csharp" label="CSharp" >
+</ClientTabItem>
+<ClientTabItem lang="csharp" >
 
 In .Net generated code, the discriminator property will be generated as internal by default, but configurable to be public.
 
@@ -957,8 +959,8 @@ public partial class Ragdoll : Cat
 }
 ```
 
-</TabItem>
-<TabItem value="typescript" label="Typescript" >
+</ClientTabItem>
+<ClientTabItem lang="typescript" >
 
 ```ts
 // RLC input models
@@ -1006,8 +1008,8 @@ export interface Ragdoll extends Cat {
 }
 ```
 
-</TabItem>
-<TabItem value="java" label="Java" >
+</ClientTabItem>
+<ClientTabItem lang="java" >
 
 ```java
 public class Cat implements JsonSerializable<Cat> {
@@ -1026,9 +1028,9 @@ public final class Siamese extends Cat {
 }
 ```
 
-</TabItem>
+</ClientTabItem>
 
-<TabItem value="go" label="Go" >
+<ClientTabItem lang="go">
 
 ```go
 // CatClassification provides polymorphic access to related types.
@@ -1073,16 +1075,16 @@ func (e *Siamese) GetCat() *Cat {
 }
 ```
 
-</TabItem>
-</Tabs>
+</ClientTabItem>
+</ClientTabs>
 
 ### Nullable
 
 TypeSpec uses `| null` to represent nullable types. Nullability is handled differently in languages, but emitter authors will find information
 about nullability by inspecting the type of a property.
 
-<Tabs>
-<TabItem value="typespec" label="TypeSpec" default>
+<ClientTabs>
+<ClientTabItem lang="typespec" >
 
 ```typespec
 model Foo {
@@ -1106,8 +1108,8 @@ enum LR {
 }
 ```
 
-</TabItem>
-<TabItem value="tcgc" label="TCGC">
+</ClientTabItem>
+<ClientTabItem lang="tcgc">
 
 A nullable type has kind `nullable` and property `valueType`. The kind of the type tells you the property is nullable, while the `valueType` tells you the underlying type you want to generate.
 
@@ -1235,8 +1237,8 @@ A nullable type has kind `nullable` and property `valueType`. The kind of the ty
 }
 ```
 
-</TabItem>
-<TabItem value="python" label="Python">
+</ClientTabItem>
+<ClientTabItem lang="python">
 
 Python treat nullable as optional. If you actually want to send the value `null` to the service without the property being ignored, you can send in `corehttp.serialization.NULL`. Python does not restrict you from setting any property to this value.
 
@@ -1262,23 +1264,23 @@ class Foo(_model_base.Model):
 
 ```
 
-</TabItem>
-<TabItem value="csharp" label="CSharp" >
+</ClientTabItem>
+<ClientTabItem lang="csharp" >
 
 TODO
 
-</TabItem>
-<TabItem value="typescript" label="Typescript" >
+</ClientTabItem>
+<ClientTabItem lang="typescript" >
 
 TODO
 
-</TabItem>
-<TabItem value="java" label="Java" >
+</ClientTabItem>
+<ClientTabItem lang="java" >
 
 TODO
 
-</TabItem>
-</Tabs>
+</ClientTabItem>
+</ClientTabs>
 
 ## Unions
 
@@ -1286,8 +1288,8 @@ TODO
 
 All emitters will generate their version of a closed enum.
 
-<Tabs>
-<TabItem value="typespec" label="TypeSpec" default>
+<ClientTabs>
+<ClientTabItem lang="typespec" >
 
 ```typespec
 union LR {
@@ -1296,8 +1298,8 @@ union LR {
 }
 ```
 
-</TabItem>
-<TabItem value="tcgc" label="TCGC">
+</ClientTabItem>
+<ClientTabItem lang="tcgc">
 
 ```json
 {
@@ -1324,8 +1326,8 @@ union LR {
 }
 ```
 
-</TabItem>
-<TabItem value="python" label="Python">
+</ClientTabItem>
+<ClientTabItem lang="python">
 
 Python never generates closed enum by design. We will always permit users to pass in additional values.
 
@@ -1338,8 +1340,8 @@ class LR(str, Enum, metaclass=CaseInsensitiveEnumMeta):
   RIGHT = "right"
 ```
 
-</TabItem>
-<TabItem value="csharp" label="CSharp" >
+</ClientTabItem>
+<ClientTabItem lang="csharp" >
 
 ```csharp
 public enum LR
@@ -1351,15 +1353,15 @@ public enum LR
 
 Serialization/deserialization will respect the value defined, in this case it is "left" for `LR.Left` and "right" for `LR.Right` respectively.
 
-</TabItem>
-<TabItem value="typescript" label="Typescript" >
+</ClientTabItem>
+<ClientTabItem lang="typescript" >
 
 ```typescript
 export type LR = "left" | "right";
 ```
 
-</TabItem>
-<TabItem value="java" label="Java" >
+</ClientTabItem>
+<ClientTabItem lang="java" >
 
 ```java
 public enum LR {
@@ -1368,15 +1370,15 @@ public enum LR {
 }
 ```
 
-</TabItem>
-</Tabs>
+</ClientTabItem>
+</ClientTabs>
 
 ### Inline union of literals with same type
 
 This is union defined inline at point of usage.
 
-<Tabs>
-<TabItem value="typespec" label="TypeSpec" default>
+<ClientTabs>
+<ClientTabItem lang="typespec" >
 
 ```typespec
 model Widget {
@@ -1384,8 +1386,8 @@ model Widget {
 }
 ```
 
-</TabItem>
-<TabItem value="tcgc" label="TCGC">
+</ClientTabItem>
+<ClientTabItem lang="tcgc">
 
 ```json
 {
@@ -1412,8 +1414,8 @@ model Widget {
 }
 ```
 
-</TabItem>
-<TabItem value="python" label="Python">
+</ClientTabItem>
+<ClientTabItem lang="python">
 
 Python generates this as a union of literals, not as enum. We also don't generate a closed set of literals.
 
@@ -1424,8 +1426,8 @@ model Widget:
   horizontal: Union[Literal["left"] | Literal["right"] | str]
 ```
 
-</TabItem>
-<TabItem value="csharp" label="CSharp" >
+</ClientTabItem>
+<ClientTabItem lang="csharp" >
 
 ```csharp
 public partial class Widget
@@ -1439,8 +1441,8 @@ public enum WidgetHorizontal
 }
 ```
 
-</TabItem>
-<TabItem value="typescript" label="Typescript" >
+</ClientTabItem>
+<ClientTabItem lang="typescript" >
 
 ```typescript
 export interface Widget {
@@ -1448,8 +1450,8 @@ export interface Widget {
 }
 ```
 
-</TabItem>
-<TabItem value="java" label="Java" >
+</ClientTabItem>
+<ClientTabItem lang="java" >
 
 ```java
 public enum WidgetHorizontal {
@@ -1458,15 +1460,15 @@ public enum WidgetHorizontal {
 }
 ```
 
-</TabItem>
-</Tabs>
+</ClientTabItem>
+</ClientTabs>
 
 ### Union of basic type and literals of that type
 
 Each language will generate their version of an open enum.
 
-<Tabs>
-<TabItem value="typespec" label="TypeSpec" default>
+<ClientTabs>
+<ClientTabItem lang="typespec" >
 
 ```typespec
 union Colors {
@@ -1476,8 +1478,8 @@ union Colors {
 }
 ```
 
-</TabItem>
-<TabItem value="tcgc" label="TCGC">
+</ClientTabItem>
+<ClientTabItem lang="tcgc">
 
 ```json
 {
@@ -1504,8 +1506,8 @@ union Colors {
 }
 ```
 
-</TabItem>
-<TabItem value="python" label="Python">
+</ClientTabItem>
+<ClientTabItem lang="python">
 
 Python generates open enum again here.
 
@@ -1518,8 +1520,8 @@ class Colors(str, Enum, metaclass=CaseInsensitiveEnumMeta):
   BLUE = "blue"
 ```
 
-</TabItem>
-<TabItem value="csharp" label="CSharp" >
+</ClientTabItem>
+<ClientTabItem lang="csharp" >
 
 ```csharp
 public readonly partial struct Colors : IEquatable<Colors>
@@ -1531,15 +1533,15 @@ public readonly partial struct Colors : IEquatable<Colors>
 }
 ```
 
-</TabItem>
-<TabItem value="typescript" label="Typescript" >
+</ClientTabItem>
+<ClientTabItem lang="typescript" >
 
 ```typescript
 export type Colors = string | "red" | "blue";
 ```
 
-</TabItem>
-<TabItem value="java" label="Java" >
+</ClientTabItem>
+<ClientTabItem lang="java" >
 
 ```java
 public final class Colors extends ExpandableStringEnum<Colors> {
@@ -1548,15 +1550,15 @@ public final class Colors extends ExpandableStringEnum<Colors> {
 }
 ```
 
-</TabItem>
-</Tabs>
+</ClientTabItem>
+</ClientTabs>
 
 ### Inline union of basic type and literals of that type
 
 This is union defined inline at point of usage which include the base type as an option.
 
-<Tabs>
-<TabItem value="typespec" label="TypeSpec" default>
+<ClientTabs>
+<ClientTabItem lang="typespec" >
 
 ```typespec
 model Widget {
@@ -1564,8 +1566,8 @@ model Widget {
 }
 ```
 
-</TabItem>
-<TabItem value="tcgc" label="TCGC">
+</ClientTabItem>
+<ClientTabItem lang="tcgc">
 
 ```json
 {
@@ -1592,8 +1594,8 @@ model Widget {
 }
 ```
 
-</TabItem>
-<TabItem value="python" label="Python">
+</ClientTabItem>
+<ClientTabItem lang="python">
 
 Python generates a union of literals again.
 
@@ -1604,8 +1606,8 @@ model Widget:
   color: Union[Literal["red"] | Literal["blue"] | str]
 ```
 
-</TabItem>
-<TabItem value="csharp" label="CSharp" >
+</ClientTabItem>
+<ClientTabItem lang="csharp" >
 
 ```csharp
 public partial class Widget
@@ -1621,8 +1623,8 @@ public readonly partial struct WidgetColor : IEquatable<WidgetColor>
 }
 ```
 
-</TabItem>
-<TabItem value="typescript" label="Typescript" >
+</ClientTabItem>
+<ClientTabItem lang="typescript" >
 
 ```typescript
 export interface Widget {
@@ -1630,8 +1632,8 @@ export interface Widget {
 }
 ```
 
-</TabItem>
-<TabItem value="java" label="Java" >
+</ClientTabItem>
+<ClientTabItem lang="java" >
 
 ```java
 public final class WidgetColor extends ExpandableStringEnum<Colors> {
@@ -1640,13 +1642,13 @@ public final class WidgetColor extends ExpandableStringEnum<Colors> {
 }
 ```
 
-</TabItem>
-</Tabs>
+</ClientTabItem>
+</ClientTabs>
 
 ### Union of other union/enum, basic type and literals of that type
 
-<Tabs>
-<TabItem value="typespec" label="TypeSpec" default>
+<ClientTabs>
+<ClientTabItem lang="typespec" >
 
 ```typespec
 import "@azure-tools/typespec-azure-resource-manager";
@@ -1658,8 +1660,8 @@ union ProvisioningState {
 }
 ```
 
-</TabItem>
-<TabItem value="tcgc" label="TCGC">
+</ClientTabItem>
+<ClientTabItem lang="tcgc">
 For union of other union or enum. TCGC will do the flatten according to the flag.
 
 With `flatten-union-as-enum` flagged `true`:
@@ -1748,8 +1750,8 @@ With `flatten-union-as-enum` flagged `false`:
 }
 ```
 
-</TabItem>
-<TabItem value="python" label="Python">
+</ClientTabItem>
+<ClientTabItem lang="python">
 
 Python generates a single open enum.
 
@@ -1764,8 +1766,8 @@ class ProvisioningState(str, Enum, metaclass=CaseInsensitiveEnumMeta):
   CANCELED = "Canceled"
 ```
 
-</TabItem>
-<TabItem value="csharp" label="CSharp" >
+</ClientTabItem>
+<ClientTabItem lang="csharp" >
 
 ```csharp
 public readonly partial struct ProvisioningState : IEquatable<ProvisioningState>
@@ -1782,8 +1784,8 @@ public readonly partial struct ProvisioningState : IEquatable<ProvisioningState>
 }
 ```
 
-</TabItem>
-<TabItem value="typescript" label="Typescript" >
+</ClientTabItem>
+<ClientTabItem lang="typescript" >
 
 ```typescript
 export type ResourceProvisioningState = "Succeeded" | "Failed" | "Canceled";
@@ -1791,8 +1793,8 @@ export type ResourceProvisioningState = "Succeeded" | "Failed" | "Canceled";
 export type ProvisioningState = string | "InProgress" | ResourceProvisioningState;
 ```
 
-</TabItem>
-<TabItem value="java" label="Java" >
+</ClientTabItem>
+<ClientTabItem lang="java" >
 
 ```java
 public final class ProvisioningState extends ExpandableStringEnum<ProvisioningState> {
@@ -1803,13 +1805,13 @@ public final class ProvisioningState extends ExpandableStringEnum<ProvisioningSt
 }
 ```
 
-</TabItem>
-</Tabs>
+</ClientTabItem>
+</ClientTabs>
 
 ### Union of other unions of literals with same type
 
-<Tabs>
-<TabItem value="typespec" label="TypeSpec" default>
+<ClientTabs>
+<ClientTabItem lang="typespec" >
 
 ```typespec
 union LR {
@@ -1828,8 +1830,8 @@ union Orientation {
 }
 ```
 
-</TabItem>
-<TabItem value="tcgc" label="TCGC">
+</ClientTabItem>
+<ClientTabItem lang="tcgc">
 For union of other union or enum. TCGC will do the flatten according to the flag.
 
 With `flatten-union-as-enum` flagged `true`:
@@ -1925,8 +1927,8 @@ With `flatten-union-as-enum` flagged `false`:
 }
 ```
 
-</TabItem>
-<TabItem value="python" label="Python">
+</ClientTabItem>
+<ClientTabItem lang="python">
 
 ```python
 from enum import Enum
@@ -1939,8 +1941,8 @@ class Orientation(str, Enum, metaclass=CaseInsensitiveEnumMeta):
   DOWN = "down"
 ```
 
-</TabItem>
-<TabItem value="csharp" label="CSharp" >
+</ClientTabItem>
+<ClientTabItem lang="csharp" >
 
 ```csharp
 public enum Orientation
@@ -1952,8 +1954,8 @@ public enum Orientation
 }
 ```
 
-</TabItem>
-<TabItem value="typescript" label="Typescript" >
+</ClientTabItem>
+<ClientTabItem lang="typescript" >
 
 ```typescript
 export type LR = "left" | "right";
@@ -1961,8 +1963,8 @@ export type UD = "up" | "down";
 export type Orientation = LR | UD;
 ```
 
-</TabItem>
-<TabItem value="java" label="Java" >
+</ClientTabItem>
+<ClientTabItem lang="java" >
 
 ```java
 public enum Orientation {
@@ -1973,13 +1975,13 @@ public enum Orientation {
 }
 ```
 
-</TabItem>
-</Tabs>
+</ClientTabItem>
+</ClientTabs>
 
 ### Inline union of other unions of literals with same type
 
-<Tabs>
-<TabItem value="typespec" label="TypeSpec" default>
+<ClientTabs>
+<ClientTabItem lang="typespec" >
 
 ```typespec
 union LR {
@@ -1997,8 +1999,8 @@ model Widget {
 }
 ```
 
-</TabItem>
-<TabItem value="tcgc" label="TCGC">
+</ClientTabItem>
+<ClientTabItem lang="tcgc">
 For union of other union or enum. TCGC will do the flatten according to the flag.
 
 With `flatten-union-as-enum` flagged `true`:
@@ -2094,8 +2096,8 @@ With `flatten-union-as-enum` flagged `false`:
 }
 ```
 
-</TabItem>
-<TabItem value="python" label="Python">
+</ClientTabItem>
+<ClientTabItem lang="python">
 
 Since this is inline, Python will generate this as a single union of all possible literal values.
 
@@ -2108,8 +2110,8 @@ model Widget:
   orientation: WidgetOrientation
 ```
 
-</TabItem>
-<TabItem value="csharp" label="CSharp" >
+</ClientTabItem>
+<ClientTabItem lang="csharp" >
 
 ```csharp
 public partial class Widget
@@ -2125,8 +2127,8 @@ public enum WidgetOrientation
 }
 ```
 
-</TabItem>
-<TabItem value="typescript" label="Typescript" >
+</ClientTabItem>
+<ClientTabItem lang="typescript" >
 
 ```typescript
 export interface Widget {
@@ -2137,8 +2139,8 @@ export type LR = "left" | "right";
 export type UD = "up" | "down";
 ```
 
-</TabItem>
-<TabItem value="java" label="Java" >
+</ClientTabItem>
+<ClientTabItem lang="java" >
 
 ```java
 public enum WidgetOrientation {
@@ -2149,15 +2151,15 @@ public enum WidgetOrientation {
 }
 ```
 
-</TabItem>
-</Tabs>
+</ClientTabItem>
+</ClientTabs>
 
 ### Union with multiple types
 
 These are unions where the values don't share same type.
 
-<Tabs>
-<TabItem value="typespec" label="TypeSpec" default>
+<ClientTabs>
+<ClientTabItem lang="typespec" >
 
 ```typespec
 model Shirt {
@@ -2165,8 +2167,8 @@ model Shirt {
 }
 ```
 
-</TabItem>
-<TabItem value="tcgc" label="TCGC">
+</ClientTabItem>
+<ClientTabItem lang="tcgc">
 
 ```json
 {
@@ -2209,8 +2211,8 @@ model Shirt {
 }
 ```
 
-</TabItem>
-<TabItem value="python" label="Python">
+</ClientTabItem>
+<ClientTabItem lang="python">
 
 Python will generate this as a union since these entries don't share the same type
 
@@ -2223,8 +2225,8 @@ model Shirt:
   sizing: ShirtSizing
 ```
 
-</TabItem>
-<TabItem value="csharp" label="CSharp" >
+</ClientTabItem>
+<ClientTabItem lang="csharp" >
 
 ```csharp
 public partial class Shirt
@@ -2233,8 +2235,8 @@ public partial class Shirt
 }
 ```
 
-</TabItem>
-<TabItem value="typescript" label="Typescript" >
+</ClientTabItem>
+<ClientTabItem lang="typescript" >
 
 ```typescript
 export interface Shirt {
@@ -2242,8 +2244,8 @@ export interface Shirt {
 }
 ```
 
-</TabItem>
-<TabItem value="java" label="Java" >
+</ClientTabItem>
+<ClientTabItem lang="java" >
 
 ```java
 public final class Shirt {
@@ -2251,8 +2253,8 @@ public final class Shirt {
 }
 ```
 
-</TabItem>
-</Tabs>
+</ClientTabItem>
+</ClientTabs>
 
 ## Enums
 
@@ -2260,8 +2262,8 @@ public final class Shirt {
 
 Standard enums will be generated as closed enums.
 
-<Tabs>
-<TabItem value="typespec" label="TypeSpec" default>
+<ClientTabs>
+<ClientTabItem lang="typespec" >
 
 ```typespec
 enum LR {
@@ -2270,8 +2272,8 @@ enum LR {
 }
 ```
 
-</TabItem>
-<TabItem value="tcgc" label="TCGC">
+</ClientTabItem>
+<ClientTabItem lang="tcgc">
 
 ```json
 {
@@ -2298,8 +2300,8 @@ enum LR {
 }
 ```
 
-</TabItem>
-<TabItem value="python" label="Python">
+</ClientTabItem>
+<ClientTabItem lang="python">
 
 Python never generates closed enums by design. We will always permit users to pass in additional values.
 
@@ -2312,8 +2314,8 @@ class LR(str, Enum, metaclass=CaseInsensitiveEnumMeta):
   RIGHT = "right"
 ```
 
-</TabItem>
-<TabItem value="csharp" label="CSharp" >
+</ClientTabItem>
+<ClientTabItem lang="csharp" >
 
 ```csharp
 public enum LR
@@ -2323,15 +2325,15 @@ public enum LR
 }
 ```
 
-</TabItem>
-<TabItem value="typescript" label="Typescript" >
+</ClientTabItem>
+<ClientTabItem lang="typescript" >
 
 ```typescript
 export type LR = "left" | "right";
 ```
 
-</TabItem>
-<TabItem value="java" label="Java" >
+</ClientTabItem>
+<ClientTabItem lang="java" >
 
 ```java
 public enum LR {
@@ -2340,13 +2342,13 @@ public enum LR {
 }
 ```
 
-</TabItem>
-</Tabs>
+</ClientTabItem>
+</ClientTabs>
 
 ### Versioning Enums
 
-<Tabs>
-<TabItem value="typespec" label="TypeSpec" default>
+<ClientTabs>
+<ClientTabItem lang="typespec" >
 
 ```typespec
 @versioned(Versions)
@@ -2359,8 +2361,8 @@ enum Versions {
 }
 ```
 
-</TabItem>
-<TabItem value="tcgc" label="TCGC">
+</ClientTabItem>
+<ClientTabItem lang="tcgc">
 
 ```json
 {
@@ -2388,29 +2390,29 @@ enum Versions {
 }
 ```
 
-</TabItem>
-<TabItem value="" label="Python">
+</ClientTabItem>
+<ClientTabItem lang="python">
 
 ```
 # Python does not generate the enum used for versioning
 ```
 
-</TabItem>
-<TabItem value="csharp" label="CSharp" >
+</ClientTabItem>
+<ClientTabItem lang="csharp" >
 
 ```csharp
 // CSharp does not generate the enum used for versioning
 ```
 
-</TabItem>
-<TabItem value="typescript" label="Typescript" >
+</ClientTabItem>
+<ClientTabItem lang="typescript" >
 
 ```typescript
 // JS does not generate the enum used for versioning
 ```
 
-</TabItem>
-<TabItem value="java" label="Java" >
+</ClientTabItem>
+<ClientTabItem lang="java" >
 
 ```java
 public enum ServiceServiceVersion implements ServiceVersion {
@@ -2419,15 +2421,15 @@ public enum ServiceServiceVersion implements ServiceVersion {
 }
 ```
 
-</TabItem>
-</Tabs>
+</ClientTabItem>
+</ClientTabs>
 
 ### Spread
 
 Spreading enums will return the resultant enum as a new single closed enum.
 
-<Tabs>
-<TabItem value="typespec" label="TypeSpec" default>
+<ClientTabs>
+<ClientTabItem lang="typespec" >
 
 ```typespec
 enum LR {
@@ -2446,8 +2448,8 @@ enum Orientation {
 }
 ```
 
-</TabItem>
-<TabItem value="tcgc" label="TCGC">
+</ClientTabItem>
+<ClientTabItem lang="tcgc">
 
 ```json
 {
@@ -2484,8 +2486,8 @@ enum Orientation {
 }
 ```
 
-</TabItem>
-<TabItem value="python" label="Python">
+</ClientTabItem>
+<ClientTabItem lang="python">
 
 Python generates one open enum, because Python never generates an enum as fully closed.
 
@@ -2500,8 +2502,8 @@ class Orientation(str, Enum, metaclass=CaseInsensitiveEnumMeta):
   DOWN = "down"
 ```
 
-</TabItem>
-<TabItem value="csharp" label="CSharp" >
+</ClientTabItem>
+<ClientTabItem lang="csharp" >
 
 ```csharp
 public enum Orientation
@@ -2513,15 +2515,15 @@ public enum Orientation
 }
 ```
 
-</TabItem>
-<TabItem value="typescript" label="Typescript" >
+</ClientTabItem>
+<ClientTabItem lang="typescript" >
 
 ```typescript
 export type Orientation = "left" | "right" | "up" | "down";
 ```
 
-</TabItem>
-<TabItem value="java" label="Java" >
+</ClientTabItem>
+<ClientTabItem lang="java" >
 
 ```java
 public enum Orientation {
@@ -2532,8 +2534,8 @@ public enum Orientation {
 }
 ```
 
-</TabItem>
-</Tabs>
+</ClientTabItem>
+</ClientTabs>
 
 ## Scalars
 
@@ -2541,8 +2543,8 @@ public enum Orientation {
 
 We will take the `@encode` decorator into account, determining how we serialize inputted scalars to send over the wire.
 
-<Tabs>
-<TabItem value="typespec" label="TypeSpec" default>
+<ClientTabs>
+<ClientTabItem lang="typespec" >
 
 ```tsp
 model Test {
@@ -2551,8 +2553,8 @@ model Test {
 }
 ```
 
-</TabItem>
-<TabItem value="tcgc" label="TCGC">
+</ClientTabItem>
+<ClientTabItem lang="tcgc">
 
 ```json
 {
@@ -2568,29 +2570,29 @@ model Test {
 }
 ```
 
-</TabItem>
-<TabItem value="python" label="Python">
+</ClientTabItem>
+<ClientTabItem lang="python">
 
 ```python
 serialized_prop = json.dumps(prop, cls=SdkJSONEncoder, format="rfc3339")
 ```
 
-</TabItem>
-<TabItem value="csharp" label="CSharp" >
+</ClientTabItem>
+<ClientTabItem lang="csharp" >
 
 ```csharp
 TODO
 ```
 
-</TabItem>
-<TabItem value="typescript" label="Typescript" >
+</ClientTabItem>
+<ClientTabItem lang="typescript" >
 
 ```typescript
 TODO;
 ```
 
-</TabItem>
-<TabItem value="java" label="Java" >
+</ClientTabItem>
+<ClientTabItem lang="java" >
 
 ```java
 // Internal implementation
@@ -2598,13 +2600,13 @@ jsonWriter.writeStringField("prop",
     this.value == null ? null : DateTimeFormatter.ISO_OFFSET_DATE_TIME.format(this.value));
 ```
 
-</TabItem>
-</Tabs>
+</ClientTabItem>
+</ClientTabs>
 
 When you specify an encoding type, say that you want to encode an integer as a string, that will also be represented in our generated SDKs.
 
-<Tabs>
-<TabItem value="typespec" label="TypeSpec" default>
+<ClientTabs>
+<ClientTabItem lang="typespec" >
 
 ```tsp
 model Test {
@@ -2613,8 +2615,8 @@ model Test {
 }
 ```
 
-</TabItem>
-<TabItem value="tcgc" label="TCGC">
+</ClientTabItem>
+<ClientTabItem lang="tcgc">
 
 ```json
 {
@@ -2630,44 +2632,44 @@ model Test {
 }
 ```
 
-</TabItem>
-<TabItem value="python" label="Python">
+</ClientTabItem>
+<ClientTabItem lang="python">
 
 ```python
 serialized_prop = json.dumps(prop, cls=SdkJSONEncoder, format="string")
 ```
 
-</TabItem>
-<TabItem value="csharp" label="CSharp" >
+</ClientTabItem>
+<ClientTabItem lang="csharp" >
 
 ```csharp
 TODO
 ```
 
-</TabItem>
-<TabItem value="typescript" label="Typescript" >
+</ClientTabItem>
+<ClientTabItem lang="typescript" >
 
 ```typescript
 TODO;
 ```
 
-</TabItem>
-<TabItem value="java" label="Java" >
+</ClientTabItem>
+<ClientTabItem lang="java" >
 
 ```java
 // Internal implementation
 jsonWriter.writeStringField("prop", Objects.toString(this.value, null));
 ```
 
-</TabItem>
-</Tabs>
+</ClientTabItem>
+</ClientTabs>
 
 ## Namespace
 
 The namespace for models, enums, and unions will follow the namespace they belong to. You can use `@clientNamespace` to override it if needed.
 
-<Tabs>
-<TabItem value="typespec" label="TypeSpec" default>
+<ClientTabs>
+<ClientTabItem lang="typespec" >
 
 ```tsp
 namespace My.Service;
@@ -2682,9 +2684,9 @@ model Bar {
 }
 ```
 
-</TabItem>
+</ClientTabItem>
 
-<TabItem value="python" label="Python">
+<ClientTabItem lang="python">
 
 ```python
 from my.service import Foo
@@ -2694,26 +2696,26 @@ foo = Foo(prop="hello")
 bar = Bar(prop="world")
 ```
 
-</TabItem>
-<TabItem value="csharp" label="CSharp" >
+</ClientTabItem>
+<ClientTabItem lang="csharp" >
 
 ```csharp
 TODO
 ```
 
-</TabItem>
-<TabItem value="typescript" label="Typescript" >
+</ClientTabItem>
+<ClientTabItem lang="typescript" >
 
 ```typescript
 TODO;
 ```
 
-</TabItem>
-<TabItem value="java" label="Java" >
+</ClientTabItem>
+<ClientTabItem lang="java" >
 
 ```java
 TODO
 ```
 
-</TabItem>
-</Tabs>
+</ClientTabItem>
+</ClientTabs>
